# singleton-gadts

./: .gitmodules  .travis.yml  README.md  cabal.project  singleton-gadts.cabal
.github/workflows/: haskell-ci.yml
src/Data/Singletons/: GADT.hs
src/Data/Singletons/GADT/: Internal.hs  Prelude.hs  TH.hs
src/Data/Singletons/GADT/Prelude/: Internal.hs
tests/: Main.hs
