name:                singleton-gadts
version:             0.1
synopsis:            SingKind instances for GADTs
description:         This package provides a variant of the @SingKind@ class
                     from the @singletons@ library which supports GADTs and
                     poly-kinded data types, as well as Template Haskell
                     functionality to quickly generate instances of it.
homepage:            https://github.com/RyanGlScott/singleton-gadts
bug-reports:         https://github.com/RyanGlScott/singleton-gadts/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Experimental
copyright:           (C) 2018 Ryan Scott
category:            Dependent Types
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.1

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/singleton-gadts

library
  exposed-modules:     Data.Singletons.GADT
                       Data.Singletons.GADT.Prelude
                       Data.Singletons.GADT.TH
  other-modules:       Data.Singletons.GADT.Prelude.Internal
  build-depends:       base             >= 4.12    && < 4.13
                     , singletons       >= 2.5     && < 2.6
                     , singleton-nats   >= 0.4.0.4 && < 0.5
                     , template-haskell >= 2.14    && < 2.15
                     , text             >= 1.2     && < 1.3
                     , th-desugar       >= 1.9     && < 1.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unticked-promoted-constructors

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base           >= 4.12    && < 4.13
                     , singleton-gadts
                     , singleton-nats >= 0.4.0.4 && < 0.5
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unticked-promoted-constructors -threaded -rtsopts
