name:                singleton-gadts
version:             0.1
synopsis:            SingKind instances for GADTs
description:         This package provides a variant of the @SingKind@ class
                     from the @singletons@ library which supports GADTs and
                     poly-kinded data types, as well as Template Haskell
                     functionality to quickly generate instances of it.
                     .
                     The design of this library is heavily inspired by
                     code written
                     <https://github.com/goldfirere/singletons/issues/150#issuecomment-306539091 here>
                     by Richard Eisenberg. This technique is presented as a
                     separate library (instead of incorporating the technique
                     directly into the @singletons@ library) due to some
                     annoying steps one must take to work around
                     <https://ghc.haskell.org/trac/ghc/ticket/12088 GHC Trac #12088>,
                     which affects the code here.  Refer to the documentation
                     in the "Data.Singletons.GADT" module for more information.
homepage:            https://github.com/RyanGlScott/singleton-gadts
bug-reports:         https://github.com/RyanGlScott/singleton-gadts/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Experimental
copyright:           (C) 2018 Ryan Scott
category:            Dependent Types
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10
tested-with:         GHC == 9.2.1

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/singleton-gadts

library
  exposed-modules:     Data.Singletons.GADT
                       Data.Singletons.GADT.Prelude
                       Data.Singletons.GADT.TH
  other-modules:       Data.Singletons.GADT.Internal
  build-depends:       base             >= 4.16  && < 4.17
                     , singletons-base  >= 3.1   && < 3.2
                     , singleton-nats   >= 0.4.2 && < 0.5
                     , template-haskell >= 2.18  && < 2.19
                     , text             >= 1.2   && < 1.3
                     , th-desugar       >= 1.13  && < 1.14
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Wno-unticked-promoted-constructors

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base           >= 4.16  && < 4.17
                     , singleton-gadts
                     , singleton-nats >= 0.4.2 && < 0.5
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Wno-unticked-promoted-constructors -threaded -rtsopts
